Aggregated trades by block

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 USDCETH_swap.csv
 USDCETH_swap_timestamp.csv
 ETHUSDC_1s.csv
+block_timestamps.csv
+ETHUSDC_klines_1684395515400_1688525656800.csv
+ETHUSDC_klines_1688070515300_1688525656800.csv
+ETHUSDC_klines_1687655884600_1688525656800.csv
+LQTYETH_swap.csv
