Add more Pricing Methodologies and LQTYETH Calculation

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ ETHUSDC_klines_1684395515400_1688525656800.csv
 ETHUSDC_klines_1688070515300_1688525656800.csv
 ETHUSDC_klines_1687655884600_1688525656800.csv
 LQTYETH_swap.csv
+.DS_Store
+ETHUSDC_klines_1684395515000_1688543783000.csv
+ETHUSDT_klines_1680438347000_1682777999000.csv
+LQTYUSDT_klines_1680438347000_1682777999000.csv
+timestamps_blocktime.csv
+timestamps_blocktime2.csv
