Add script to get current uncollected fees using callStatic

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ ETHUSDT_klines_1680438347000_1682777999000.csv
 LQTYUSDT_klines_1680438347000_1682777999000.csv
 timestamps_blocktime.csv
 timestamps_blocktime2.csv
-src/node_modules
-src/node_modules/.DS_Store
+node_modules
 
 *.pyc
