--- a/.github/workflows/auto_run_notebooks.yml
+++ b/.github/workflows/auto_run_notebooks.yml
@@ -22,7 +22,7 @@ jobs:
         pip install -r requirements.txt
         pip install nbconvert ipython[all]
     - name: Execute notebooks
-      run: python -m nbconvert --execute ./notebooks/Theoretical_LVR.ipynb
+      run: python -m nbconvert --execute --to notebook ./notebooks/Theoretical_LVR.ipynb
 
   job2:
     runs-on: ubuntu-latest
@@ -44,4 +44,4 @@ jobs:
         pip install -r requirements.txt
         pip install nbconvert ipython[all]
     - name: Execute notebooks
-      run: python -m nbconvert --execute ${{ matrix.file }}
+      run: python -m nbconvert --execute --to notebook ${{ matrix.file }}
